experiments/03-network-policies/policies/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-default-deny-apps
  namespace: default
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["s0", "s1", "sdb1"]
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-external-to-s0
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: s0
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-s0-to-s1
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: s0
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: s1
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-s1-from-s0
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: s1
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: s0
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-s1-to-sdb1
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: s1
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: sdb1
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-sdb1-from-s1
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: sdb1
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: s1
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-dns-egress
  namespace: default
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["s0", "s1", "sdb1"]
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
